Refactor layout: role-based navigation, dynamic footer,improved Home and About page structure and styling